Also causes problems?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ version = "0.1a_dev0"
 description = "A package for performing various FLASH related tasks."
 readme = "README.md"
 license = {file = "LICENSE"}
-dependencies = [ "numpy>=2.0.0" ]
+dependencies = [ "numpy" ]
 maintainers = [
     {name = "Gaétan J.A.M. Jalin", email = "gaetan.jalin@tu-darmstadt.de"}
 ]
